# YoumeVideo_SDK_Windows

./: README.md  Video SDK for win32-API手册.md  Video SDK for win32-快速接入.md  Video SDK for win32-状态码.md  video SDK for win32-典型场景实现方法.md
YoumeTalkSDK_3.4.0.846_windows/win32/debug/lib/: youme_voice_engine.lib
YoumeTalkSDK_3.4.0.846_windows/win32/release/lib/: youme_voice_engine.lib
YoumeTalkSDK_3.4.0.846_windows/win64/debug/lib/: youme_voice_engine.lib
YoumeTalkSDK_3.4.0.846_windows/win64/release/lib/: youme_voice_engine.lib
YoumeVideoSDK_3.4.1.1016_windows/include/: IYouMeVideoRenderEngine.h  IYouMeVoiceEngine.h
YoumeVideoSDK_3.4.1.1016_windows/win32/debug/lib/: youme_voice_engine.lib
YoumeVideoSDK_3.4.1.1016_windows/win32/release/lib/: youme_voice_engine.lib
YoumeVideoSDK_3.4.1.1016_windows/win64/debug/lib/: youme_voice_engine.lib
YoumeVideoSDK_3.4.1.1016_windows/win64/release/lib/: youme_voice_engine.lib
win32/: YouMe.sln
win32/YouMeDemo/: CMakeLists.txt  ReadMe.txt  YouMeConfig.cpp  YouMeConfig.h  YouMeDemo.aps  YouMeDemo.cpp  YouMeDemo.h  YouMeDemo.rc  YouMeDemo.vcxproj  YouMeDemo.vcxproj.filters  YouMeDemoDlg.cpp  YouMeDemoDlg.h  YouMeEventCallback.cpp  YouMeEventCallback.h  YouMeExternDemoDlg.cpp  YouMeExternDemoDlg.h  YouMeExternVideoDlg.cpp  YouMeExternVideoDlg.h  YouMeMainDlg.cpp  YouMeMainDlg.h  YouMeProductDlg.cpp  YouMeProductDlg.h  YouMeVideoDlg.cpp  YouMeVideoDlg.h  resource.h  stdafx.cpp  stdafx.h
win32/YouMeDemo/res/: YouMeDemo.rc2
win32/include/: IYouMeEventCallback.h  IYouMeVideoCallback.h  IYouMeVideoRenderEngine.h  IYouMeVoiceEngine.h  SDLDisplay.h  YouMeConstDefine.h
win32/output/release/shaders/: scenes.xconfig
win32/test/: CMakeLists.txt  test.cpp
